--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,23 +10,23 @@ body {
 }
 
 /*Top Menu Bar Styling Begins*/
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -34,16 +34,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
-    overflow: hidden;
+header nav ul li {
+    display: inline-block;
+    margin-left: 25px;   
 }
 
-.header div ul li {
-    display: inline-block;
-    margin-left: 25px;
-    
-}
 /*Webpage Top Menu Bar Rightside Text Color*/
 a {
     color: #ffffff;
@@ -61,6 +56,8 @@ a {
     background-size: cover;
     background-position: center;
 }
+
+
 
 /*Search Engine Optimization, Online Rep Management, Social Media Marketing Styling Begins*/
 p {
@@ -141,7 +138,7 @@ p {
 }
 /*SEO, Online Management, Social Media Markting Styling Ends*/
 
-/*Benefits Right Sidebar Styling Begins*/
+/* Benefits Right Sidebar Styling Begins*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -169,7 +166,7 @@ p {
     max-width: 150px;
 }
 
-/*Benefits Right Sidebar Styling Ends*/
+/*Benefits Right Sidebar Styling Ends */
 
 
 /*Footer Styling*/
